fix the syntax highlighting style

--- a/_posts/2023-03-08-drawing-1.md
+++ b/_posts/2023-03-08-drawing-1.md
@@ -8,7 +8,7 @@ title:  "Drawing - Part1!"
 <script type="text/javascript" src="{{ base.url | prepend: site.url }}/assets/js/sketch0001.js" ></script>
 <br />
 
-```
+~~~javascript
 class Shape {
   constructor(args) {
     this.fill = 255
@@ -55,4 +55,4 @@ function draw() {
   background(0)
   scene.draw()
 }
-```
+~~~
